--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "UiPath_REFrameWork",
-  "description": "UiPath REFramework Template",
+  "name": "RPA-Uploading_of_Balances",
+  "description": "This is the process of Uploading of Balances.",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.ComplexScenarios.Activities": "[1.1.3]",
